--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
-language: # テストする言語
+language:
   ruby
-rvm: # テストするrubyバージョン
+rvm:
   - 2.4.1
-bundler_args: # bundle installに渡されるオプション
-  --jobs=2 # スレッド数
+bundler_args:
+  --jobs=2
 script:
   - bundle exec rake db:setup
   - bundle exec rake spec
+cache:
+  bundler
